data/all_generated_tests/raw_wast_tests/br_IncorrectConditionEvaluation_681.wast
;; 2. **Test Description:**    Execute a `br_if` instruction in a loop where the condition should evaluate to false but ensure the branch is incorrectly taken anyway. This tests the differential evaluation where incorrect popping/handling of bool conditions might erroneously result in unwarranted loop restarts.

(assert_invalid
  (module
    (func $incorrect-branch-handling-in-loop
      (loop $loop
        (br_if $loop (i32.const 0)) ; Condition is false, but branch might be incorrectly taken
        (i32.const 1)
      )
    )
  )
  "type mismatch"
)